--- a/css/smar.css
+++ b/css/smar.css
@@ -499,7 +499,7 @@ nav#nav-page ul li a:hover {
 	color: #16A082;
 }
 
-#smar-loading {
+#smar-overlay {
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -514,7 +514,7 @@ nav#nav-page ul li a:hover {
 	background-color: rgba(236,236,236,.8);
 	z-index: 7;
 }
-#smar-loading div {
+#smar-overlay div {
 	display: -webkit-flex;
 	display: flex;
 	-webkit-justify-content: space-around;
@@ -523,6 +523,9 @@ nav#nav-page ul li a:hover {
 	align-items: center;
 	width: 100%;
 	height: 100%;
+}
+#smar-overlay-timeout {
+	display: none;
 }
 
 
