--- a/css/smar.css
+++ b/css/smar.css
@@ -161,7 +161,7 @@ input, select, textarea {
   border: none;
   border-radius: 0;
 }
-input:not([type="submit"]), .input, select, textarea {
+input:not([type="submit"]):not([type="reset"]), .input, select, textarea {
 	display: block;
 	box-sizing: border-box;
 	width: 100%;
@@ -194,7 +194,7 @@ textarea {
 .input {
 	border: 0;
 }
-input:not([type="submit"]):focus,
+input:not([type="submit"]):not([type="reset"]):focus,
 select:focus, textarea:focus {
 	margin-bottom: 7px;
 	border-bottom: 2px solid #16A082;
@@ -262,7 +262,7 @@ input[type="radio"]:checked + label::before {
 
 
 
-input[type="submit"], button {
+input[type="submit"], button, input[type="reset"] {
 	min-width: 5.5rem;
 	height: 2.25rem;
 	margin: .75rem .25rem .75rem 0;
@@ -278,7 +278,7 @@ input[type="submit"], button {
 	outline: none;
 	transition: background-color .4s ease-out 0s;
 }
-input[type="submit"]:hover, button:hover {
+input[type="submit"]:hover, button:hover, input[type="reset"]:hover {
 	background-color: #D9D9D9;
 	cursor: pointer;
 }
@@ -287,45 +287,45 @@ input.flat, button.flat {
 	background-color: transparent;
 	color: #16A082;
 }
-input[type="submit"].flat:hover, button.flat:hover {
+input[type="submit"].flat:hover, button.flat:hover, input[type="reset"].flat:hover {
 	background-color: rgba(153, 153, 153, .2);
 }
-input[type="submit"].flat:focus, button.flat:focus {
+input[type="submit"].flat:focus, button.flat:focus, input[type="reset"].flat:focus {
 	background-color: rgba(153, 153, 153, .2);
 }
-input[type="submit"].raised, button.raised {
+input[type="submit"].raised, button.raised, input[type="reset"].raised {
 	background-color: #16A082;
 	color: #FFF;
 }
-input[type="submit"].raised:hover, button.raised:hover {
+input[type="submit"].raised:hover, button.raised:hover, input[type="reset"].raised:hover {
 	background-color: #107861;
 }
 
 
 .dark-ui label, .dark-ui .label,
-.dark-ui input:not([type="submit"]), .dark-ui .input,
+.dark-ui input:not([type="submit"]):not([type="reset"]), .dark-ui .input,
 .dark-ui select, .dark-ui textarea {
 	color: #FFF;
 	border-color: #FFF;
 }
-.dark-ui input:not([type="submit"]):focus {
+.dark-ui input:not([type="submit"]):not([type="reset"]):focus {
 	border-color: #1FDEB4;
 }
-.dark-ui input:not([type="submit"]):focus + label,
+.dark-ui input:not([type="submit"]):not([type="reset"]):focus + label,
 .dark-ui select:focus + label,
 .dark-ui textarea:focus + label {
 	color: #1FDEB4;
 }
-.dark-ui input[type="submit"]:not(.flat), .dark-ui button:not(.flat) {
+.dark-ui input[type="submit"]:not(.flat), .dark-ui input[type="reset"]:not(.flat), .dark-ui button:not(.flat) {
 	box-shadow: 0 .1rem .3rem #777;
 }
-.dark-ui input[type="submit"].flat, .dark-ui button.flat {
+.dark-ui input[type="submit"].flat, .dark-ui input[type="reset"].flat, .dark-ui button.flat {
 	color: #FFF;
 }
-.dark-ui input[type="submit"].flat:hover, .dark-ui button.flat:hover {
+.dark-ui input[type="submit"].flat:hover, .dark-ui input[type="reset"].flat:hover, .dark-ui button.flat:hover {
 	background-color: rgba(204, 204, 204, .15);
 }
-.dark-ui input[type="submit"].flat:focus, .dark-ui button.flat:focus {
+.dark-ui input[type="submit"].flat:focus, .dark-ui input[type="reset"].flat:focus, .dark-ui button.flat:focus {
 	background-color: rgba(204, 204, 204, .25);
 }
 
